@startuml
' ============================================================
' Диаграмма 5. ER-диаграмма базы данных
' Актуальное состояние Prisma / PostgreSQL
' ============================================================

title Диаграмма 5. ER-диаграмма базы данных\nPrisma schema -> PostgreSQL

hide circle
skinparam shadowing false
skinparam linetype ortho
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #4A5568
}

entity "users" as users {
  * **id** : int <<PK, auto-increment>>
  --
  * login : varchar(50) <<UNIQUE, NOT NULL>>
  * password : text <<NOT NULL>>
  * full_name : text <<NOT NULL>>
  * profession : text <<NOT NULL, default ''>>
  * account_status : varchar <<NOT NULL, default 'active'>>
  * account_role : varchar <<NOT NULL, default 'member'>>
  * created_at : timestamp <<NOT NULL>>
  * updated_at : timestamp <<NOT NULL>>
}

entity "teams" as teams {
  * **id** : int <<PK, auto-increment>>
  --
  * name : text <<NOT NULL>>
  * description : text <<NOT NULL, default ''>>
  * created_at : timestamp <<NOT NULL>>
  * created_by_id : int <<FK -> users.id, NOT NULL>>
}

entity "team_members" as team_members {
  * **id** : int <<PK, auto-increment>>
  --
  * user_id : int <<FK -> users.id, NOT NULL>>
  * team_id : int <<FK -> teams.id, NOT NULL>>
  * team_role : varchar <<NOT NULL>>
  ..
  UNIQUE(user_id, team_id)
}

entity "projects" as projects {
  * **id** : int <<PK, auto-increment>>
  --
  * team_id : int <<FK -> teams.id, NOT NULL>>
  * name : text <<NOT NULL>>
  * description : text <<NOT NULL, default ''>>
  * status : varchar <<NOT NULL, default 'active'>>
  * created_at : timestamp <<NOT NULL>>
  * updated_at : timestamp <<NOT NULL>>
}

entity "project_members" as project_members {
  * **id** : int <<PK, auto-increment>>
  --
  * project_id : int <<FK -> projects.id, NOT NULL>>
  * user_id : int <<FK -> users.id, NOT NULL>>
  * role : varchar <<NOT NULL>>
  * assigned_at : timestamp <<NOT NULL>>
  ..
  UNIQUE(project_id, user_id)
}

entity "tasks" as tasks {
  * **id** : int <<PK, auto-increment>>
  --
  * project_id : int <<FK -> projects.id, NOT NULL>>
  * name : text <<NOT NULL>>
  * description : text <<NOT NULL, default ''>>
  * deadline : timestamp <<NOT NULL>>
  * status : varchar <<NOT NULL, default 'new'>>
  * difficulty : int <<NOT NULL>>
    assignee_id : int <<FK -> users.id, nullable>>
  * created_by_id : int <<FK -> users.id, NOT NULL>>
  * created_at : timestamp <<NOT NULL>>
  * updated_at : timestamp <<NOT NULL>>
}

entity "audit_logs" as audit_logs {
  * **id** : int <<PK, auto-increment>>
  --
  * user_id : int <<FK -> users.id, NOT NULL>>
  * action : varchar <<NOT NULL>>
  * entity_type : varchar <<NOT NULL>>
    entity_id : int <<nullable>>
    old_value : text <<nullable>>
    new_value : text <<nullable>>
  * timestamp : timestamp <<NOT NULL>>
  * description : text <<NOT NULL, default ''>>
}

users ||--o{ teams : "created_by_id"
users ||--o{ team_members : "user_id"
teams ||--o{ team_members : "team_id"

teams ||--o{ projects : "team_id"
users ||--o{ project_members : "user_id"
projects ||--o{ project_members : "project_id"

projects ||--o{ tasks : "project_id"
users ||--o{ tasks : "created_by_id"
users |o--o{ tasks : "assignee_id"

users ||--o{ audit_logs : "user_id"

note bottom of audit_logs
  Смена статуса задачи не хранится в отдельной таблице.
  История отражается через:
  action = status_change
  old_value / new_value
end note

@enduml
